fixed game logic , made winner visible to user

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,17 @@
+@font-face {
+    font-family: ArcadeClassic;
+    src: url(fonts/ARCADECLASSIC.TTF)
+}
+
+.gameResult {
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+    font-family: ArcadeClassic;
+}
+
 .gameBoard {
     display: grid;
     justify-content: center;
